fix searchbox/button almost overlapping the widget below

--- a/style.css
+++ b/style.css
@@ -747,6 +747,7 @@ footer {
 
 	.search-box {
 		padding: 5px;
+		margin-bottom: 50px;
 	}
 
 	.widget_calendar {
